Fixed overflow long code
Close #747

--- a/webcompat/static/css/development/components/comment.css
+++ b/webcompat/static/css/development/components/comment.css
@@ -95,6 +95,8 @@
     position: relative;
     word-wrap: break-word;
     padding:.5em .5em 0;
+    overflow-x: auto;
+    overflow-y: hidden;
   }
     /* list style */
     .wc-Comment-content ul,
